# via-httplib

./: .dockerignore  .gitignore  .travis.yml  CHUNKS.md  CLIENT.md  CMakeLists.txt  DESIGN.md  Dockerfile  Doxyfile  MAKE.md  README  README.md  REQUEST.md  USE.md  ViaHttpLibConfigVersion.cmake  ViaHttpLibTargets.cmake  appveyor.yml  via-httplib.cppcheck  via-httplib.pri  via-httplib.pro
.github/workflows/: c-cpp.yml
cmake/: README.md  ViaHttpLibConfig.cmake  ViaHttpLibConfigVersion.cmake  ViaHttpLibTargets.cmake  android.toolchain.cmake
docs/: CHUNKS.md  CLIENT.md  Chunked_Encoding.md  Client.md  Client_Configuration.md  Client_Events.md  Configuration.md  DESIGN.md  Design_HTTP.md  Design_HTTP_Request.md  Design_HTTP_Response.md  Design_Top.md  Design_comms.md  Doxyfile  MAKE.md  REQUEST.md  SECURITY.md  Server.md  Server_Configuration.md  Server_Events.md  Server_Request_Routing.md  Server_SSL.md  Server_Security.md  USE.md
docs/images/: Thumbs.db
docs/uml/: client_sequence_diagram.puml  client_sequence_diagram.txt  http_client_classes.puml  http_client_classes.txt  http_client_event_sequence_diagram.txt  http_client_template_class_diagram.txt  http_headers_parsing_state_diagram.txt  http_request_chunks_sequence_diagram.txt  http_request_continue_sequence_diagram.txt  http_request_invalid_sequence_diagram.txt  http_request_parser.txt  http_request_sequence_diagram.txt  http_response_chunks_sequence_diagram.txt  http_response_parser.txt  http_response_sequence_diagram.txt  http_server_classes.puml  http_server_classes.txt  http_server_classes_detailed_org.txt  http_server_event_sequence_diagram.txt  http_server_template_class_diagram.txt  request_parsing_state_diagram.txt  response_line_parsing_state_diagram.txt  response_parsing_state_diagram.txt  server_sequence_diagram.puml  server_sequence_diagram.txt  socket_disconnection_sequence_diagram.puml  socket_disconnection_sequence_diagram.txt  ssl_state_diagram.txt  via_comms_classes.puml  via_comms_classes.txt  via_namespaces.puml  via_namespaces.txt
examples/: HttpClient.pro  HttpServer.pro  boost_libs.pri  cacert.cpp  cacert.hpp  cacert.pem  openssl.pri  privkey.cpp  privkey.hpp  privkey.pem
examples/certificates/: ca-certificate.pem  ca-key.pem  create_certificates.sh
examples/certificates/client/: client-certificate.pem  client-key.pem
examples/certificates/server/: server-certificate.pem  server-key.pem  server_crypto.hpp
examples/client/: CMakeLists.txt  chunked_http_client.cpp  example_http_client.cpp  example_https_client.cpp  simple_http_client.cpp  simple_https_client.cpp  simple_mutual_authentication_https_client.cpp  timer_http_client.cpp
examples/server/: CMakeLists.txt  SimpleServer.vcxproj  chunked_http_server.cpp  example_http_server.cpp  example_https_server.cpp  httpServer.vcxproj  routing_http_server.cpp  simpleSSL.vcxproj  simple_http_server.cpp  simple_https_server.cpp  simple_mutual_authentication_https_server.cpp  thread_pool_http_server.cpp  thread_pool_https_server.cpp
include/via/: http_client.hpp  http_connection.hpp  http_server.hpp  no_except.hpp
include/via/comms/: asio_if.hpp  connection.hpp  server.hpp  socket_adaptor.hpp  tcp_adaptor.hpp  udp_adaptor.hpp
include/via/comms/ssl/: ssl_tcp_adaptor.hpp
include/via/http/: character.hpp  chunk.hpp  cookie.hpp  header_field.hpp  headers.hpp  request.hpp  request_handler.hpp  request_method.hpp  request_router.hpp  request_uri.hpp  response.hpp  response_status.hpp
include/via/http/authentication/: authentication.hpp  base64.hpp  basic.hpp
include/via/thread/: threadsafe_hash_map.hpp
src/via/http/: character.cpp  chunk.cpp  cookie.cpp  header_field.cpp  headers.cpp  request.cpp  request_method.cpp  request_router.cpp  response.cpp  response_status.cpp  viahttplib.def  viahttplib.vcxproj
src/via/http/authentication/: base64.cpp  basic.cpp
tests/: HttpParserUnitTests.pro  test_main.cpp
tests/http/: test_character.cpp  test_chunk.cpp  test_cookies.cpp  test_header_field.cpp  test_headers.cpp  test_request.cpp  test_request_router.cpp  test_request_uri.cpp  test_response.cpp
tests/http/authentication/: test_base64.cpp  test_basic_authentication.cpp
tests/thread/: test_threadsafe_hash_map.cpp
uml/: http_client_classes.txt  request_line_parsing_state_diagram.txt  via_comms_classes.txt
via/: http_client.hpp  http_connection.hpp  http_server.hpp  http_ssl_connection.hpp  http_ssl_server.hpp
via/comms/: buffered_connection.hpp  connection.hpp  server.hpp  socket_adaptor.hpp  ssl_tcp_buffered_connection.hpp  ssl_tcp_server.hpp  tcp_adaptor.hpp  tcp_buffered_connection.hpp  tcp_server.hpp  udp_adaptor.hpp
via/comms/ssl/: ssl_tcp_adaptor.hpp
via/http/: character.cpp  character.hpp  chunk.cpp  chunk.hpp  header_field.cpp  header_field.hpp  headers.cpp  headers.hpp  request.cpp  request.hpp  request_method.cpp  request_method.hpp  response.cpp  response.hpp  response_status.cpp  response_status.hpp
